# TeachBooks-Favourites

./: README.md  pyproject.toml
src/teachbooks_favourites/: __init__.py
