[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "teachbooks-favourites"
dynamic=["version"]
description = "A collection of our favourite Sphinx extensions for use in JupyterBooks."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Dennis den Ouden-van der Horst", email = "d.denouden-vanderhorst@tudelft.nl" }
]
dependencies = [
    "sphinx",
    "sphinx-thebe @ git+https://github.com/TeachBooks/Sphinx-Thebe@c744e62",
    "jupyterbook-patches==v1.13.4",
    "download-link-replacer==v1.0.6",
    "sphinx-image-inverter==v1.1.11",
    "teachbooks-sphinx-tippy==v1.0.15",
    "sphinx-exercise==1.2.1",
    "sphinx-iframes==v1.2.0",
    "sphinx-named-colors==v1.0.3",
    "sphinx-dropdown-toggle==v1.3.3",
    "sphinx-togglebutton==v0.4.4",
    "sphinx-proof==0.4.0",
    "sphinx-code-examples==v1.2.3",
    "sphinx-accessibility==v1.0.1",
    "sphinx-nb-execution-patterns==v1.1.0",
    "sphinx-launch-buttons==v1.0.7",
    "sphinx-github-alerts==v1.0",
    "sphinx-metadata-figure==v1.4.0",
    # waiting for merge of https://github.com/mgeier/sphinx-last-updated-by-git/pull/97,
    "sphinx-last-updated-by-git @ git+https://github.com/TeachBooks/sphinx-last-updated-by-git@986142b",
    "sphinx-gated-directives==v1.0.2",
    "jb1-zoomies==0.2.1"
]

requires-python = ">=3.10"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/teachbooks_favourites/_version.py"

[tool.hatch.metadata]
allow-direct-references = true
